Se corrije ortogafia de Ingenieria informatica

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="assets/unic_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Ingenieria informatica</h4></li>
+                    <li class="academic__courses__item__title"><h4>ingeniería Informática</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2010 - Uniciencia</p></li>
                 </ul>
             </div>
@@ -192,7 +192,7 @@
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img src="assets/logo-ub.png"></li>
-                    <li class="academic__courses__item__title"><h4>Diplomado Desarrollado Software</h4></li>
+                    <li class="academic__courses__item__title"><h4>Diplomado Desarrollo de Software</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2022 - Universidad el bosque</p></li>
                 </ul>
             </div>
