--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Fonte del Proyecto Raleway -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <title> Mi Portafolio</title>
+    <link rel="icon" type="image/png" href="assets/diseno-web.png">
+    <title> Portafolio - Eduardo Amaya</title>
 </head>
 <body>
     <!-- Sección del Menú  -->
