Se agrega proyecto fruta e fruto

--- a/index.html
+++ b/index.html
@@ -203,6 +203,21 @@
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
         <h2 class="experience__section__title" >Experiencia Profesional</h2>
+        
+        <div class="experiencie__box">
+            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
+            <img class="experience__img" src="assets/fruta-e-fruto.png">
+            <div class="experience__info">
+                <h2 class="experience__title">Fruta e Fruto</h2>
+                <h3 class="experience__text">Arquitectura CSS: descomplicando los problemas</h3>
+                    <div class="experience__description">
+                        <!-- Pon el enlace del proyecto en Github o GithubPages -->
+                            <span class="experience__repo"><a href="https://github.com/ea0627/fruta-e-fruto.git"><button class="experiencia__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://ea0627.github.io/fruta-e-fruto/"><button class="experience__botao--demo">Ver demo</button></a></span>
+                    </div>
+            </div>
+        </div>  
+
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets/aluraplay_print.png">
